
2022-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line): full parse of options on error to provide
	  all information to the user
	* codegen.c (output_internal_function): only close files on CANCEL-callback
	  when they aren't closed already, preventing a file exception on CANCEL
	* codegen.c (cb_open_mode_to_string), tree.h: new function
	* codegen.c (output_param): generation for CB_DIRECT (string passed as tree)
	* codegen.c (output_error_handler), typeck.c (cb_emit_open): use of
	  cb_open_mode_to_string for improved codegen (using enum values instead
	  of numeric constants)

2022-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (function): attach ref-mod to all kind of functions to consume
	  them here and to pass invalid ref-mod for all numeric intrinsics to
	  cb_build_intrinsic enable us to create a nice diagnostic
	* cobc.c, flag.def: do not imply -fsource-location with -g any more (but
	  still with --debug and -ftrace-all); imply -fsource-location with -fdump
	* codegen.c: don't output source location for -fdump -fno-source-location

2022-09-30  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* codegen.c, cconv.h, cconv.c: extract EBCDIC & ASCII conversion tables
	  to a dedicated module
	* codegen.c: factorize functions for outputting conversion tables
	* flag.def, help.c: add -febcdic-table flag to customize EBCDIC
	  translation

2022-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): fix codegen for odo-check
	  on level 01 OCCURS items, bug introduced with 2022-07-12
	* pplex.l: dropped check for "spurious '$'", fixing bug #839
	  and acucomment not handling $ correct
	* flag.def (cb_flag_stack_extended), cobc.c: new option "stack-extended"
	* codegen.c: handle generation for new cb_flag_stack_extended with
	  cob_frame_ext (attached origin source location, section and paragraph
	  name) and its addition to the cob_module